--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -70,3 +71,4 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+source_insight/
